增加仓库的种类大屏的接口
