# collect_open_source_data/api/open_source/v1/open_source.pb.validate.go
@@ -171,6 +171,142 @@ var _ interface {
 	ErrorName() string
 } = ScreenLanguageCountReplyValidationError{}
 
+// Validate checks the field values on ScreenCategoryCountReply with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ScreenCategoryCountReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ScreenCategoryCountReply with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ScreenCategoryCountReplyMultiError, or nil if none found.
+func (m *ScreenCategoryCountReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ScreenCategoryCountReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetCategoryCounts() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, ScreenCategoryCountReplyValidationError{
+						field:  fmt.Sprintf("CategoryCounts[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, ScreenCategoryCountReplyValidationError{
+						field:  fmt.Sprintf("CategoryCounts[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ScreenCategoryCountReplyValidationError{
+					field:  fmt.Sprintf("CategoryCounts[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return ScreenCategoryCountReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// ScreenCategoryCountReplyMultiError is an error wrapping multiple validation
+// errors returned by ScreenCategoryCountReply.ValidateAll() if the designated
+// constraints aren't met.
+type ScreenCategoryCountReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ScreenCategoryCountReplyMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ScreenCategoryCountReplyMultiError) AllErrors() []error { return m }
+
+// ScreenCategoryCountReplyValidationError is the validation error returned by
+// ScreenCategoryCountReply.Validate if the designated constraints aren't met.
+type ScreenCategoryCountReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ScreenCategoryCountReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ScreenCategoryCountReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ScreenCategoryCountReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ScreenCategoryCountReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ScreenCategoryCountReplyValidationError) ErrorName() string {
+	return "ScreenCategoryCountReplyValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ScreenCategoryCountReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sScreenCategoryCountReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ScreenCategoryCountReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ScreenCategoryCountReplyValidationError{}
+
 // Validate checks the field values on RepoFavListRequest with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
@@ -3003,3 +3139,114 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ScreenLanguageCountReplyLanguageCountValidationError{}
+
+// Validate checks the field values on ScreenCategoryCountReplyCategoryCount
+// with the rules defined in the proto definition for this message. If any
+// rules are violated, the first error encountered is returned, or nil if
+// there are no violations.
+func (m *ScreenCategoryCountReplyCategoryCount) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ScreenCategoryCountReplyCategoryCount
+// with the rules defined in the proto definition for this message. If any
+// rules are violated, the result is a list of violation errors wrapped in
+// ScreenCategoryCountReplyCategoryCountMultiError, or nil if none found.
+func (m *ScreenCategoryCountReplyCategoryCount) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ScreenCategoryCountReplyCategoryCount) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for CategoryID
+
+	// no validation rules for CategoryName
+
+	// no validation rules for Count
+
+	if len(errors) > 0 {
+		return ScreenCategoryCountReplyCategoryCountMultiError(errors)
+	}
+
+	return nil
+}
+
+// ScreenCategoryCountReplyCategoryCountMultiError is an error wrapping
+// multiple validation errors returned by
+// ScreenCategoryCountReplyCategoryCount.ValidateAll() if the designated
+// constraints aren't met.
+type ScreenCategoryCountReplyCategoryCountMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ScreenCategoryCountReplyCategoryCountMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ScreenCategoryCountReplyCategoryCountMultiError) AllErrors() []error { return m }
+
+// ScreenCategoryCountReplyCategoryCountValidationError is the validation error
+// returned by ScreenCategoryCountReplyCategoryCount.Validate if the
+// designated constraints aren't met.
+type ScreenCategoryCountReplyCategoryCountValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ScreenCategoryCountReplyCategoryCountValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ScreenCategoryCountReplyCategoryCountValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ScreenCategoryCountReplyCategoryCountValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ScreenCategoryCountReplyCategoryCountValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ScreenCategoryCountReplyCategoryCountValidationError) ErrorName() string {
+	return "ScreenCategoryCountReplyCategoryCountValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ScreenCategoryCountReplyCategoryCountValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sScreenCategoryCountReplyCategoryCount.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ScreenCategoryCountReplyCategoryCountValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ScreenCategoryCountReplyCategoryCountValidationError{}
